finished adaptive intro and offering

--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,20 @@
   </head>
 
   <body class="page">
-
     <header class="header">
       <div class="header__logo"></div>
       <ul class="header__list">
-        <li class="header__lang-link"><a class="header__link" href="#">WhatsApp: +7 903 028-60-04</a></li>
-        <li class="header__lang-link"><a class="header__link" href="#">vip@tinvest.org</a></li>
+        <li class="header__lang-link">
+          <a class="header__link" href="https://wa.me/79030286004?text=Здравствуйте.">WhatsApp: +7 903 028-60-04</a>
+        </li>
+        <li class="header__lang-link">
+          <a class="header__link header__link_last" href="#">vip@tinvest.org</a>
+        </li>
       </ul>
     </header>
 
     <section class="intro">
-      <h1 class="intro__title">ГОТОВЫЕ СДЕЛКИ С НЕДВИЖИМОСТЬЮ</h1>
+      <h1 class="intro__title">      ГОТОВЫЕ СДЕЛКИ С НЕДВИЖИМОСТЬЮ      </h1>
       <p class="intro__text">
         Подключайтесь к бесплатному Telegram-каналу с выгодными  инвестиционными сделками
       </p>
@@ -30,38 +33,84 @@
     <section class="offering">
       <ul class="offering__list">
         <li class="offering__plus">
-          <img src="" alt="" class="offering__checkmark">
-          <p class="offering__text">Сделки "под ключ" без суеты - находим выгодные квартиры ниже(!) рынка, бронируем и выкупаем для вас, продаем за вас по хорошей рыночной цене</p>
+          <img
+            src="./img/checkmark.png"
+            alt="галочка"
+            class="offering__checkmark"
+          />
+          <p class="offering__text">
+            <span class="offering__text_bold"
+              >Сделки с недвижимостью "под ключ" без суеты</span
+            >
+            - мы делаем всё за вас, а вы экономите
+            <span class="offering__text_highlighted">95% времени</span>
+          </p>
         </li>
         <li class="offering__plus">
-          <img src="" alt="" class="offering__checkmark">
-          <p class="offering__text">Консервативный доход  20% - 30% </p>
+          <img
+            src="./img/checkmark.png"
+            alt="галочка"
+            class="offering__checkmark"
+          />
+          <p class="offering__text">
+            <span class="offering__text_bold"
+              >Предложение для серьезных инвесторов.</span
+            >
+            Вложения в одну сделку от
+            <span class="offering__text_highlighted">1 млн. до 500 млн.₽</span>
+          </p>
         </li>
         <li class="offering__plus">
-          <img src="" alt="" class="offering__checkmark">
-          <p class="offering__text">Средние вложения в одну сделку:  550 тыс - 1,5 млн.₽ </p>
+          <img
+            src="./img/checkmark.png"
+            alt="галочка"
+            class="offering__checkmark"
+          />
+          <p class="offering__text">Доходность от 25% годовых</p>
         </li>
         <li class="offering__plus">
-          <img src="" alt="" class="offering__checkmark">
-          <p class="offering__text">Доходность сделок с ипотекой  60 - 120%</p>
+          <img
+            src="./img/checkmark.png"
+            alt="галочка"
+            class="offering__checkmark"
+          />
+          <p class="offering__text">Средний сроки сделок: 8 - 24 месяцев</p>
         </li>
         <li class="offering__plus">
-          <img src="" alt="" class="offering__checkmark">
-          <p class="offering__text">Быстрый выход через перепродажу:  12-18 месяцев </p>
+          <img
+            src="./img/checkmark.png"
+            alt="галочка"
+            class="offering__checkmark"
+          />
+          <p class="offering__text">
+            <span class="offering__text_highlighted">Безопасно</span> - ваши
+            инвестиции обеспечены ликвидной недвижимостью, которую мы
+            приобретаем ниже рынка
+          </p>
         </li>
         <li class="offering__plus">
-          <img src="" alt="" class="offering__checkmark">
-          <p class="offering__text">Безопасно - инвестиции защищены недвижимостью и по ФЗ</p>
+          <img
+            src="./img/checkmark.png"
+            alt="галочка"
+            class="offering__checkmark"
+          />
+          <p class="offering__text">
+            Большинство сделок можно провести
+            <span class="offering__text_highlighted">удаленно</span>
+          </p>
         </li>
-        <li class="offering__plus">
-          <img src="" alt="" class="offering__checkmark">
-          <p class="offering__text">Возможна удаленная сделка в отделении вашего банка</p>
-        </li>
+        <button class="telegramm-link" onclick="window.location.href='https://t.me/tinvest_sdelki_bot';">&#x2197; ПЕРЕЙТИ В КАНАЛ</button>
       </ul>
-      <img src="" alt="" class="offering__merculov">      
+      <img
+        src="./img/owner.jpg"
+        alt="руководитель"
+        class="offering__merculov"
+      />
     </section>
 
-    <button class="telegramm-link">&#10148; ПЕРЕЙТИ В КАНАЛ</button>
+    <!-- <button class="telegramm-link">&#10148; ПЕРЕЙТИ В КАНАЛ</button> -->
+
+    <!-- 
 
     <section class="instruction">
       <img src="" alt="" class="instruction__foto">
@@ -163,7 +212,6 @@
         Юр. адрес: 398042, Липецкая обл, Липецк г, Универсальный проезд, дом № 14, помещение 23.
       </article>
       <link rel="stylesheet" href="" class="footer__sertificate">
-    </footer>
-
+    </footer> -->
   </body>
 </html>
