--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         </li>
       </ul>
     </header>
-
+<!--
     <section class="intro">
       <h1 class="intro__title">      ГОТОВЫЕ СДЕЛКИ С НЕДВИЖИМОСТЬЮ      </h1>
       <p class="intro__text">
@@ -108,20 +108,20 @@
       />
     </section>
 
-    <!-- <button class="telegramm-link">&#10148; ПЕРЕЙТИ В КАНАЛ</button> -->
-
-    <!-- 
-
     <section class="instruction">
-      <img src="" alt="" class="instruction__foto">
-      <h3 class="instruction__title">+ Пошаговая инструкция</h3>
-      <p class="instruction__text">Как зарабатывать на срочных сделках с перепродажей квартир от 60% до 120% годовых</p>
+      <img src="./img/instruction.jpg" alt="" class="instruction__foto">
+      <div class="instruction__text-block">
+        <h3 class="instruction__title">+ Пошаговая инструкция</h3>
+        <p class="instruction__text">Как зарабатывать на крупных сделках с недвижимостью от 30% до 70% годовых</p>
+      </div>      
     </section>
+  -->
 
     <section class="how-it-works">
+      <h2 class="how-it-works__title">Как работает наш конвейер готовых сделок с недвижимостью:</h2>
       <ul class="how-it-works__steps">
         <li class="how-it-works__step">
-          <img src="" alt="" class="how-it-works__info-foto">
+          <!-- <img src="./img/star.jpg" alt="" class="how-it-works__info-foto"> -->
           <p class="how-it-works__text">Находим выгодную ликвидную квартиру</p>
           <p class="how-it-works__hidden-text">Мы находим ликвидные квартиры, студии или апартаменты в крупных городах, а так же на юге России</p>
         </li>
